test/syc/good/lnot.c
/*
 * Logical NOT
 */

int a;

int lnot(void)
{
	return (int)!(1 < 2);
}
