test/syc/bad/recmbrfun.c
/*
 * Record member is a function
 */

struct s {
	void x(void);
};
